force-app/main/default/objects/Slack_App__c/Slack_App__c.object-meta.xml
<CustomObject>
    <label>Slack App</label>
    <nameField>
        <label>Slack App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Slack Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>