force-app/main/default/objects/Slack_App__c/fields/App_ID__c.field-meta.xml
<CustomField>
    <fullName>App_ID__c</fullName>
    <externalId>true</externalId>
    <label>App ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>