force-app/main/default/objects/Slack_App__c/fields/Authentication_URL__c.field-meta.xml
<CustomField>
    <fullName>Authentication_URL__c</fullName>
    <label>Authentication URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>